===============================================================================
Preliminary notes:
------------------
Mark "o": new feature
Mark "*": bug fixed.
Mark "!": change that can break compatibility with older version
===============================================================================

version 5.4.1
========================
o Support list-style-position:inside.
* More strict edge cancel for block level.

version 5.4.0 2015/12/2
========================
o Add Nehan::Document.
o Add new callback 'onPage'.
o Refine whole structure.
! Nehan.createEngine, Nehan.setup, Nehan.PageStream are removed.

version 5.3.4 2015/10/26
========================
* Fix wrong ligature range.

version 5.3.3 2015/10/25
========================
o Avoid generating child generator if not required.
o Support typographic ligature.
* Disabled vertical glyph on nintendo browser.

version 5.3.2 2015/09/23
========================
o Enable vertical glyph for Firefox(ver >= 41).

version 5.3.1 2015/08/27
========================
o Support logical float clearance(clear:start, clear:end, clear:both).
o Support text-justify:justify.
o Cache mached static selector for each style(speed up about 15%).
* Fix css property bug when it's written by camel cased style.
* Stop overwriting to prototype, so now Nehan.Char.prototype.constructor.name is "Char" for example.

version 5.3.0 2015/07/14
========================
o Add tree object to page output.
o Add new option 'capturePageText' added to Nehan.PageStream::asyncGet or Nehan.PagedElement::setContent for adding text node to page object.
o Add new  method 'filter' to 'Nehan::PagedElement' and 'Nehan::PageStream'.
o Enable vertical glyph for IE >= 10.
! Change callback argument of onProgress and onComplete in Nehan::PageStream and Nehan::PagedElement.
! Config.capture is removed.

version 5.2.0 2015/07/02
========================
! Now class selectors and id selectors are not required to be "nehan-" prefixed in setStyle method.