@@ -45,6 +45,7 @@
     <script type="text/javascript" src="nehan.float-group.js"></script>
     <script type="text/javascript" src="nehan.flow.js"></script>
     <script type="text/javascript" src="nehan.font.js"></script>
+    <script type="text/javascript" src="nehan.hash-set.js"></script>
     <script type="text/javascript" src="nehan.obj.js"></script>
     <script type="text/javascript" src="nehan.tag.js"></script>
   </head>
