@@ -9,6 +9,8 @@ Mark "!": change that can break compatibility with older version
 version 5.4.1
 ========================
 o Support list-style-position:inside.
+o Support shorthanded font setting.
+o Add Nehan.createRootContext, Nehan.createRootGenerator.
 * More strict edge cancel for block level.
 
 version 5.4.0 2015/12/2
